# mab

./: README.md  UISimulation.ipynb  index.md  pyproject.toml  requirements.txt  simulation.ipynb  uniform_simulation.ipynb
docs/source/: conf.py  help.rst  index.rst  license.rst
mab/: __init__.py  ab.py  annealingsoftmax.py  bernoulliarm.py  betats.py  enums.py  epsilongreedy.py  mab.py  metric.py  montecarlo.py  randomselect.py  realtime.py  rewards.py  softmax.py  tools.py  ucb.py  ucb1.py  viz.py
tests/: test_ab.py  test_annealingsoftmax.py  test_epsilongreedy.py  test_mab.py  test_metric.py  test_randomselect.py  test_rewards.py  test_simulation.py  test_softmax.py  test_tools.py  test_ucb.py
